# IQA-webservice

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: run.py
src/app/: __init__.py  routes.py  schemas.py  services.py  settings.py
test/: performance_test.py  requirements.txt
